--- a/esp.html
+++ b/esp.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -6,8 +7,8 @@
 	</head>
 	
 	<body>
-		<h2>ESPAÑA</h2>
-		<h1>ESPAÑA</h1>
-		<h2>ESPAÑA</h2>
+		<h2>VIVA</h2>
+		<h1>EL</h1>
+		<h2>REY</h2>
 	</body>
 </html>
